miniml-syntax/src/snapshots/miniml_syntax__parser__tests__neg.snap
---
source: miniml-syntax/src/parser.rs
expression: fmt
---
Expr @ 0..2
  Prefix @ 0..2
    Neg @ 0..1
    Expr @ 1..2
      Ident @ 1..2
        "x"
