miniml-syntax/src/snapshots/miniml_syntax__parser__tests__rational.snap
---
source: miniml-syntax/src/parser.rs
expression: expr
---
Spanned {
    value: Lit(
        Spanned {
            value: Rational(
                Ratio {
                    numer: 41,
                    denom: 152,
                },
            ),
            span: Span {
                start: 0,
                end: 7,
            },
        },
    ),
    span: Span {
        start: 0,
        end: 7,
    },
}
