miniml-syntax/src/snapshots/miniml_syntax__parser__tests__real.snap
---
source: miniml-syntax/src/parser.rs
expression: expr
---
Spanned {
    value: Lit(
        Spanned {
            value: Real(
                123.456,
            ),
            span: Span {
                start: 0,
                end: 7,
            },
        },
    ),
    span: Span {
        start: 0,
        end: 7,
    },
}
