miniml-syntax/src/snapshots/miniml_syntax__parser__tests__unit.snap
---
source: miniml-syntax/src/parser.rs
expression: expr
---
Spanned {
    value: Unit,
    span: Span {
        start: 0,
        end: 2,
    },
}
